# fracture

./: .gitignore  CLAUDE.md  LICENSE  README.md  iamex-attack.json  iamex-report.json  iamex-scan.json  mulerun-attack.json  mulerun-report.json  mulerun-scan.json  pyproject.toml
demo/: __init__.py  repro_target.py  sample-report.json
demo/golden-workspace/: attack.json  report.json  scan.json
fracture/: cli.py
fracture/agents/: __init__.py  base.py  execution.py  recon.py  report.py  strategy.py
fracture/core/: __init__.py  operations.py  orchestrator.py  parser.py  result.py  surface_discovery.py  target.py
fracture/modules/: response_normalization.py
fracture/modules/extract/: engine.py
fracture/modules/fingerprint/: engine.py
fracture/modules/hpm/: engine.py
fracture/modules/memory/: engine.py
fracture/modules/obliteratus/: engine.py
fracture/modules/privesc/: engine.py
fracture/modules/retrieval_poison/: engine.py
fracture/modules/ssrf/: engine.py
fracture/reporting/: docx_export.py  pdf_export.py
fracture/ui/: __init__.py  control_center.py
poc/: poc.html  server.py
tests/: test_cli_smoke.py  test_demo_target.py  test_fingerprint_calibration.py  test_module_classifiers.py  test_reporting_exports.py  test_surface_discovery.py  test_target_contract.py
