[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cinder-fracture"
version = "0.1.0"
description = "Autonomous AI Red Team Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "playwright>=1.44.0",
]

[project.scripts]
fracture = "fracture.cli:app"

[project.urls]
Homepage = "https://cindersecurity.io"
Repository = "https://github.com/cinder-security/fracture"

[tool.hatch.build.targets.wheel]
packages = ["fracture"]
